 * The database now uses a new versioning scheme (alongside the old
   one, for backwards compatability), using incrementing integers
   instead of bitwise flags. Ideas by [GM] and Covenent. [MG]

Minor changes:
 * Talek's chunk attribute storage system, which pages attribute
   contents to and from disk as needed, is now optional by popular
   request. Controlled via options.h [SW]
 * time() and convsecs() can use symbolic timezones (US/Pacific, EST,
   etc.) if the host server has a time zone database installed. [SW]

Fixes:
 * When regexp matching an ansi'd string, named captures weren't set at all.
   For non-ansi'd strings, non-named (numeric) captures were sometimes 
   overwritten with the values of named captures. Reported by Sketch. [MG]
 * The configure script incorrectly reported that ssl_slave was unavailable
   when told to disable it via --disable-ssl_slave. Reported by Cheetah. [MG]
 * Sound from an AUDIBLE wagon object used to propagate into other wagon
   objects in the same location with an @listen of *. It now does so again.
   Reported by Xeero and Padraic. [MG]
 * Loading a reboot db is more robust. Inspired by Padraic. [SW]
 * scan() couldn't be used by rooms. Reported by Padraic. [MG]
 * Possible crashbug in the queue triggered by events reported by
   Rince@Wing Commander: New Horizon. [MG]
 * @list attribute would show duplicates for aliases. [MG]
 * insert(,foo,-1) no longer appends an extra delimiter. [MG]
 * @function/clone didn't work correctly, and could potentially cause a
   crash. [MG]

Commands:
 * @edit/regexp[/all][/nocase], command version of regedit[all][i]().
   Suggested by Minion. [MG]

Functions:
 * ldelete(), replace(), elements() and extract() now accept negative
   position arguments, to count backwards from the end of the list, similar 
   to insert(). Suggested by Minion. [MG]
 * replace() now takes an optional output separator. [MG]

Minor changes:
 * Logged messages now have events in the LOG tree. Suggested by